asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__show_refs__show_refs_at_local_branch.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 244
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
 Tags                                                                           |
   main                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fd8cb7fb62be808a
