asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__show_refs__show_refs_at_remote_branch.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 250
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌? main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
 ? origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 76eeb3af62854e8
