asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__show_refs__show_refs_at_tag.snap
---
source: asyncgit/src/lib/tui/git/tests/mod.rs
assertion_line: 257
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌? main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
 ? origin/main                                                                  |
                                                                                |
 Tags                                                                           |
 ? v1.0                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fd8cb7fb62be808a
